<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alan.andy.gamerecord.EditEventActivity"
    tools:showIn="@layout/activity_edit_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Time"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:text="@string/text_time"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/button_today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:contentDescription="@string/text_today"
                app:srcCompat="@android:drawable/ic_menu_today" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:textSize="20sp"
            android:hint="@string/text_time"
            android:autofillHints="@string/text_time" tools:targetApi="o" />

        <TextView
            android:id="@+id/textView_Fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_fee"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_Fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="20sp"
            android:hint="@string/text_fee"
            android:autofillHints="@string/text_fee" tools:targetApi="o" />

        <TextView
            android:id="@+id/textView_Comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_comments"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_Comments"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="1024"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textSize="20sp"
            android:hint="@string/text_comments"
            android:autofillHints="@string/text_comments" tools:targetApi="o" />

        <Switch
            android:id="@+id/switch_IsMajong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ismajong"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/button_camera"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/take_picture" />

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:color/transparent"
            android:contentDescription="@string/picture_preview" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
