<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alan.andy.gamerecord.EditPersonActivity"
    tools:showIn="@layout/activity_edit_person">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/textView_Time"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:text="@string/text_time"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/button_today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:contentDescription="@string/text_today"
                app:srcCompat="@android:drawable/ic_menu_today" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:textSize="20sp"
            android:hint="@string/text_time"
            android:autofillHints="@string/text_time" tools:targetApi="o" />

        <TextView
            android:id="@+id/textView_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:hint="@string/text_name"
            android:autofillHints="@string/text_name" tools:targetApi="o" />

        <TextView
            android:id="@+id/textView_Balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_balance"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText_Balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="20sp"
            android:hint="@string/text_balance"
            android:autofillHints="@string/text_balance" tools:targetApi="o" />

        <TextView
            android:id="@+id/textView_Comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_comments"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText_Comments"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="1024"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textSize="20sp"
            android:hint="@string/text_comments"
            android:autofillHints="@string/text_comments" tools:targetApi="o"/>
    </LinearLayout >

</android.support.constraint.ConstraintLayout>
