<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/cv_item"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_player_picture"
            android:layout_width="160dp"
            android:layout_height="160dp"
            card_view:srcCompat="@android:color/darker_gray"
            android:contentDescription="@string/player_picture"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/button_choose_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:contentDescription="@string/choose_gallery"
                android:src="@android:drawable/ic_menu_gallery" />

            <ImageButton
                android:id="@+id/button_choose_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:contentDescription="@string/choose_camera"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/player_picture"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.v7.widget.CardView>